criação da rota para avaliar agendamento
