# src/app/controllers/AppointmentController.ts
@@ -170,9 +170,30 @@ class AppointmentController{
         message: err.message
       });
     }
-    
-  } 
+  }
   
+  async createRating(request: Request, response: Response){
+    try{
+      const { id } = request.params;
+      const { rating_number, description, customer } = request.body;
+      
+      const service = new CreateAppointmentService();
+
+      const appointment = await service.findOne(Number(id));
+
+      const rating = await service.executeRating({rating_number, description, customer, appointment});
+  
+      return response.status(200).json({
+        success: true,
+        rating: rating
+      });
+    } catch (err){
+      return response.status(400).json({
+        success: false,
+        message: err.message
+      })
+    }
+  } 
 }
 
 export default new AppointmentController();
