# src/routes/appointments.routes.ts
@@ -8,6 +8,7 @@ const appointmentRouter = Router();
 appointmentRouter.post('/', ensureAuthenticated, appointmentController.create);
 appointmentRouter.get('/', ensureAuthenticated, appointmentController.getAll);
 appointmentRouter.get('/:id', ensureAuthenticated, appointmentController.getById);
+appointmentRouter.post('/:id/rating', appointmentController.createRating);
 appointmentRouter.patch('/cancel/:id', ensureAuthenticated, appointmentController.update);
 appointmentRouter.patch('/finish/:id', ensureAuthenticated, appointmentController.update);
 export default appointmentRouter;
